Add Metadata for Static Resources (#50)
A common standard for things like regions, images, flavors that can't be
provisioned etc.
